# tensorflow

tensorflow/contrib/lite/: CMakeLists.txt
tensorflow/contrib/lite/kernels/internal/optimized/: cpu_check.h
